# StreamDeck-DiscordVolumeMixer2

./: .gitignore  .gitmodules  CMakeLists.txt  DIAGNOSTICS.md  LICENSE.md  README.md  deploy.cmake  todo.txt
etc/: speaking_deco.afdesign  sshot.afphoto
src/: channelmember.cpp  channelmember.h  declares.h  dvmdevice.cpp  dvmdevice.h  dvmplugin.cpp  dvmplugin.h  main.cpp  voicechannelmember.cpp  voicechannelmember.h
src/action/: action_back.cpp  action_back.h  action_deafen.cpp  action_deafen.h  action_indexeduser.cpp  action_indexeduser.h  action_indexedvcminfo.cpp  action_indexedvcminfo.h  action_indexedvcmvolume.cpp  action_indexedvcmvolume.h  action_microphone.cpp  action_microphone.h  action_openmixer.cpp  action_openmixer.h  action_vcminfo.cpp  action_vcminfo.h  action_vcmpaging.cpp  action_vcmpaging.h  action_vcmvolume.cpp  action_vcmvolume.h  dvmaction.cpp  dvmaction.h  indexeduseraction.cpp  indexeduseraction.h  indexedvcmaction.cpp  indexedvcmaction.h  voicechannelmemberaction.cpp  voicechannelmemberaction.h
